fixed horizontal scrolling issue

--- a/frontend/src/stylesheets/home.css
+++ b/frontend/src/stylesheets/home.css
@@ -4,12 +4,13 @@
 	box-sizing: border-box;
 }
 
-html, body {
-    max-width: 100%;
-    /* overflow-x: hidden; */
+body {
+	width: 100%;
+ 	overflow-x: hidden;
 }
 
 .parallax {
+	width: 100%;
 	position: absolute;
 	z-index: -1;
 }
@@ -73,7 +74,6 @@ html, body {
 main {
 	position: relative;
 	width: 100%;
-
 }
 
 .content {
